src/objects/Sales_Coach__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoner</fullName>
                </value>
                <value>
                    <fullName>AS Courtesy</fullName>
                </value>
                <value>
                    <fullName>AS Decline</fullName>
                </value>
                <value>
                    <fullName>AS Retention</fullName>
                </value>
                <value>
                    <fullName>BIZ</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>RA</fullName>
                </value>
                <value>
                    <fullName>SBR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friendly_Name__c</fullName>
        <label>Friendly Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Coach News</fullName>
                </value>
                <value>
                    <fullName>Sales Coach Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Coach</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Friendly_Name__c</columns>
        <columns>Link__c</columns>
        <columns>Department__c</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Coaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>